# cmd/api/auth.go
@@ -3,9 +3,11 @@ package main
 import (
 	"crypto/sha256"
 	"encoding/hex"
+	"fmt"
 	"net/http"
 
 	"github.com/google/uuid"
+	"github.com/pradytpk/go-blog/internal/mailer"
 	"github.com/pradytpk/go-blog/internal/store"
 )
 
@@ -23,15 +25,15 @@ type UserWithToken struct {
 
 // registerUserHandler godoc
 //
-//	@Summary		Register a user
+//	@Summary		Registers a user
 //	@Description	Registers a user
 //	@Tags			authentication
 //	@Accept			json
 //	@Produce		json
-//	@Param			payload	body	RegisterUserPayload	true	"User credentials"
-//	@Succedd		201 {object} UserWithToken "User registered"
-//	@Failure		400	{object}	error
-//	@Failure		500	{object}	error
+//	@Param			payload	body		RegisterUserPayload	true	"User credentials"
+//	@Success		201		{object}	UserWithToken		"User registered"
+//	@Failure		400		{object}	error
+//	@Failure		500		{object}	error
 //	@Router			/authentication/user [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
@@ -44,23 +46,28 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		app.badRequestResponse(w, r, err)
 		return
 	}
+
 	user := &store.User{
 		Username: payload.Username,
 		Email:    payload.Email,
 	}
 
+	// hash the user password
 	if err := user.Password.Set(payload.Password); err != nil {
 		app.internalServerError(w, r, err)
+		return
 	}
 
 	ctx := r.Context()
 
 	plainToken := uuid.New().String()
 
+	// hash the token for storage but keep the plain token for email
 	hash := sha256.Sum256([]byte(plainToken))
 	hashToken := hex.EncodeToString(hash[:])
 
-	if err := app.store.UsersIF.CreateAndInvite(ctx, user, hashToken, app.config.mail.exp); err != nil {
+	err := app.store.UsersIF.CreateAndInvite(ctx, user, hashToken, app.config.mail.exp)
+	if err != nil {
 		switch err {
 		case store.ErrDuplicateEmail:
 			app.badRequestResponse(w, r, err)
@@ -76,6 +83,32 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		User:  user,
 		Token: plainToken,
 	}
+	activationURL := fmt.Sprintf("%s/confirm/%s", app.config.frontendURL, plainToken)
+
+	isProdEnv := app.config.env == "production"
+	vars := struct {
+		Username      string
+		ActivationURL string
+	}{
+		Username:      user.Username,
+		ActivationURL: activationURL,
+	}
+
+	// send mail
+	status, err := app.mailer.Send(mailer.UserWelcomeTemplate, user.Username, user.Email, vars, !isProdEnv)
+	if err != nil {
+		app.logger.Errorw("error sending welcome email", "error", err)
+
+		// rollback user creation if email fails (SAGA pattern)
+		if err := app.store.UsersIF.Delete(ctx, user.ID); err != nil {
+			app.logger.Errorw("error deleting user", "error", err)
+		}
+
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	app.logger.Infow("Email sent", "status code", status)
 
 	if err := app.jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
 		app.internalServerError(w, r, err)
