# docs/swagger.json
@@ -29,7 +29,7 @@
                 "tags": [
                     "authentication"
                 ],
-                "summary": "Register a user",
+                "summary": "Registers a user",
                 "parameters": [
                     {
                         "description": "User credentials",
@@ -42,6 +42,12 @@
                     }
                 ],
                 "responses": {
+                    "201": {
+                        "description": "User registered",
+                        "schema": {
+                            "$ref": "#/definitions/main.UserWithToken"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {}
@@ -272,7 +278,7 @@
                 }
             }
         },
-        "/users//activate/{token}": {
+        "/users/activate/{token}": {
             "put": {
                 "security": [
                     {
@@ -596,6 +602,32 @@
                 "title": {
                     "type": "string",
                     "maxLength": 100
+                }
+            }
+        },
+        "main.UserWithToken": {
+            "type": "object",
+            "properties": {
+                "_": {
+                    "$ref": "#/definitions/store.password"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
